--- a/fm/src/app/home-my-data/total-employee/total-employee.component.html
+++ b/fm/src/app/home-my-data/total-employee/total-employee.component.html
@@ -10,7 +10,10 @@
         <th>Action</th>
       </tr>
     </thead>
+    </table>
 
+    <div class="table-body">
+        <table>
     <tbody>
       <tr *ngFor="let data of datas">
         <td>{{ data.employeeName }}</td>
@@ -29,4 +32,5 @@
       </tr>
     </tbody>
   </table>
+  </div>
 </div>
