--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -38,7 +38,7 @@
 
       <!-- Present Today -->
       <div class="col-lg-3 col-md-6 col-sm-6 mb-3">
-        <div class="card stat-card h-100">
+        <div class="card stat-card h-100"  (click)="openPresentEmployee()">
           <div class="card-body">
             <h6>Present Today</h6>
             <h2>{{ presentToday }}</h2>
