--- a/fm/src/app/appraisal-form/appraisal-form.component.scss
+++ b/fm/src/app/appraisal-form/appraisal-form.component.scss
@@ -17,13 +17,13 @@ body {
 // Container for the form
 .container-fluid {
   max-width: 70%;
-  margin: 2rem auto;
   padding: $padding;
   background-color: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: $border-radius;
   overflow-y: auto;  // Enable vertical scroll
-  max-height: 83vh;  // Limit height for scrolling
+ max-height: calc(95vh - 180px);
+  // Limit height for scrolling
 
   h2 {
     color: $primary-color;
