--- a/fm/src/app/time-sheet/time-sheet.component.scss
+++ b/fm/src/app/time-sheet/time-sheet.component.scss
@@ -127,8 +127,10 @@ $background-color: #ecf0f1;
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+      width: 100%;
   
     input {
+       width: calc(100% - 2rem);
       flex: 1;
       padding: 0.5rem;
       padding-right: 2rem;
@@ -252,4 +254,8 @@ $background-color: #ecf0f1;
       background-color: darken($accent-color, 10%);
     }
   }
+}
+
+input, select, textarea {
+  box-sizing: border-box;
 }
