--- a/fm/src/app/home-my-data/total-employee/total-employee.component.html
+++ b/fm/src/app/home-my-data/total-employee/total-employee.component.html
@@ -1,36 +1,38 @@
 <div class="table-container">
-  <table>
+  <div class="search-box">
+    <input 
+      type="text" 
+      placeholder="Search by ID, Name, Designation..."
+      [(ngModel)]="searchText"
+      (input)="onSearch()"
+    />
+  </div>
+
+  <table class="fixed-table">
     <thead>
       <tr>
-        <th>Employee Name</th>
         <th>Employee Code</th>
+        <th>Employee Name</th>
         <th>Designation</th>
         <th>Location</th>
         <th>Department</th>
         <th>Action</th>
       </tr>
     </thead>
-    </table>
 
-    <div class="table-body">
-        <table>
     <tbody>
-      <tr *ngFor="let data of datas">
-        <td>{{ data.employeeName }}</td>
-        <td>{{ data.employeeCode }}</td>
+      <tr *ngFor="let data of filteredData">
+        <td>{{ data.employeeId }}</td>
+        <td>{{ data.fullName }}</td>
         <td>{{ data.designation }}</td>
         <td>{{ data.location }}</td>
         <td>{{ data.department }}</td>
-        <td>
-          <button class="view-btn" (click)="viewEmployee(data)">View</button>
-        </td>
+        <td><button class="view-btn" (click)="viewEmployee(data)">View</button></td>
       </tr>
 
-      <!-- No Data Message -->
-      <tr *ngIf="datas.length === 0">
+      <tr *ngIf="filteredData.length === 0">
         <td colspan="6" class="no-data">No data found</td>
       </tr>
     </tbody>
   </table>
-  </div>
 </div>
