--- a/fm/src/app/home-my-data/total-employee/total-employee.component.scss
+++ b/fm/src/app/home-my-data/total-employee/total-employee.component.scss
@@ -1,60 +1,93 @@
+.search-box {
+  width: 100%;
+  margin-bottom: 20px;
 
-/* Leave Summary Table */
+  input {
+    width: 100%;
+    padding: 12px 16px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    outline: none;
+    background: #fff;
+    transition: 0.3s ease;
+    box-shadow: 0px 2px 6px rgba(0,0,0,0.05);
+
+    &::placeholder {
+      color: #999;
+      font-size: 14px;
+    }
+
+    &:focus {
+      border-color: #007bff;
+      box-shadow: 0 0 6px rgba(0,123,255,0.3);
+    }
+  }
+}
+
 .table-container {
   background: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-
-    thead{
-        background-color: #f7f7f7;
-        font-weight: bold;
-    }
-
-    th, td {
-      padding: 12px;
-      text-align: left;
-      border-bottom: 1px solid #eee;
-    }
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-    .table-body{
-        max-height: 450px;
-        overflow-y: auto;
-        display: block;
+.fixed-table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  /* Force equal column width */
 
-        td,th{
-            min-width: 120px;
-        }
-
-    &::-webkit-scrollbar {
-      width: 6px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: #888;
-      border-radius: 4px;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-      background: #555;
-    }
+  thead {
+    background-color: #f7f7f7;
+    font-weight: bold;
+    display: table;
+    width: 100%;
   }
 
+  tbody {
+    display: block;
+    max-height: 450px;
+    overflow-y: auto;
+    width: 100%;
+  }
 
-    .view-btn {
-      background: #007bff;
-      color: white;
-      padding: 5px 12px;
-      border-radius: 5px;
-      border: none;
-      cursor: pointer;
-    }
-  
+  tr {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+  }
+
+  th,
+  td {
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #eee;
+    min-width: 120px;
+  }
+
+  tbody::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  tbody::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+  }
+
+  tbody::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  .view-btn {
+    background: #007bff;
+    color: white;
+    padding: 5px 12px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+  }
+
 
   .pagination {
     display: flex;
@@ -72,10 +105,3 @@
     }
   }
 }
-.no-data {
-  text-align: center;
-  padding: 15px;
-  font-size: 16px;
-  color: #777;
-}
-
