--- a/fm/src/app/department-directory/department-directory.component.html
+++ b/fm/src/app/department-directory/department-directory.component.html
@@ -1,18 +1,18 @@
-<div class="container">
-    <div class="sidenav">
-        <div class="search-container">
-            <input type="text" class="search-bar" placeholder="Search Department">
-            <i class="fa fa-search search-icon"></i>
-          </div>
-          
-      <div class="nav-section" *ngFor="let department of departments" (click)="selectDepartment(department)">
-        <div class="nav-item">{{ department.label }}</div>
+  <div class="container">
+      <div class="sidenav">
+          <div class="search-container">
+              <input type="text" class="search-bar" placeholder="Search Department"  [(ngModel)]="searchTerm" >
+              <i class="fa fa-search search-icon"></i>
+            </div>
+            
+        <div class="nav-section" *ngFor="let department of filteredDepartments" (click)="selectDepartment(department)">
+          <div class="nav-item">{{ department.label }}</div>
+        </div>
+      </div>
+      
+      <div class="content">
+        <h2>{{ selectedDepartment?.label }}</h2>
+        <!-- Department content will be displayed here -->
       </div>
     </div>
     
-    <div class="content">
-      <h2>{{ selectedDepartment?.label }}</h2>
-      <!-- Department content will be displayed here -->
-    </div>
-  </div>
-  
