--- a/fm/src/app/team-list/team-list.component.html
+++ b/fm/src/app/team-list/team-list.component.html
@@ -1,8 +1,21 @@
-<!-- employee-table.component.html -->
-<div class="body">
+<div class="team-card-container" *ngIf="!selectedTeam">
+  <div 
+    class="team-card"
+    *ngFor="let team of teams"
+    (click)="selectTeam(team)"
+    [class.active]="selectedTeam === team"
+  >
+    {{ team }}
+  </div>
+</div>
+
+<div *ngIf="selectedTeam" class="body">
     <div class="container-fluid">
       <div class="header">
         <div>
+           <button class="back-btn" *ngIf="selectedTeam" (click)="goBack()">
+      ← Back
+    </button>
           <select [(ngModel)]="reporteeFilter" (change)="filterReportees()">
             <option value="Employee">Employee View</option>
             <option value="Admin">Admin</option>
@@ -43,7 +56,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let employee of employees">
+            <tr *ngFor="let employee of filteredEmployees">
               <td><input type="checkbox" /></td>
               <td>{{employee.employeeId}}</td>
               <td>{{employee.firstName}}</td>
